--- a/presets/fullPage.js/examples/stylesheet.css
+++ b/presets/fullPage.js/examples/stylesheet.css
@@ -6,6 +6,10 @@ body {
 h1 {
   text-shadow: 0px -40px 10px white;
   color: rgba(255,255,255,0);
+  top: 20px;
+  position: absolute;
+  text-align: center;
+  width: 100%
 }
 
 #menu{
