--- a/presets/fullPage.js/examples/stylesheet.css
+++ b/presets/fullPage.js/examples/stylesheet.css
@@ -169,6 +169,11 @@ h1 {
 .slide h1 {
   width: 20%;
   text-align: center;
+  margin-bottom: 30px;
+}
+
+.slide img {
+  margin-top: 30px;
 }
 
 .earthy {
