--- a/presets/fullPage.js/examples/stylesheet.css
+++ b/presets/fullPage.js/examples/stylesheet.css
@@ -176,9 +176,18 @@ h1 {
   margin-top: 30px;
 }
 
-.earthy {
-  height: 300px;
-  width: 300px;
+.games {
+  margin: 0 auto;
+  width: auto;
+  overflow: auto;
+  margin-right: 0;
+  margin-left: 0;
+}
+
+.game {
+  float: left;
+  position: relative;
+  margin-right: 30px;
 }
 
 
