--- a/presets/fullPage.js/examples/stylesheet.css
+++ b/presets/fullPage.js/examples/stylesheet.css
@@ -213,3 +213,32 @@ h1 {
   color: white;
   background: rgba(255,255,255,0);
 }
+.overview {
+  width: auto;
+  height: auto;
+  overflow: auto;
+  margin: 0px auto;
+}
+
+.overview li {
+  list-style: none;
+  float: left;
+  position: relative;
+  width: 100px;
+  margin-right: 30px;
+}
+
+.overview a {
+  text-decoration: none;
+  color: white;
+}
+
+.overview p {
+  clear: both;
+}
+
+
+.contact a {
+  text-decoration: none;
+  color: white;
+}
