--- a/presets/fullPage.js/examples/stylesheet.css
+++ b/presets/fullPage.js/examples/stylesheet.css
@@ -166,6 +166,13 @@ h1 {
   transition: 0.3s;
 }
 
+.slide p {
+  width: 90%;
+  font-size: 1.3rem;
+  text-align: center;
+  margin: 0 auto;
+}
+
 .slide h1 {
   width: 20%;
   text-align: center;
@@ -173,7 +180,8 @@ h1 {
 }
 
 .slide img {
-  margin-top: 30px;
+  margin-top: 10px;
+  border-radius: 5px;
 }
 
 .games {
@@ -200,6 +208,36 @@ h1 {
   background-size: cover;
 }
 
+.intro {  
+  background: rgba(0,0,0,0.5);
+  padding: 15px 0px;
+}
+
+.intro span, .about span {
+  font-weight: bold;
+  color: #0066FF;
+}
+
+.about {
+  margin-top: 60px;
+  background: rgba(0,0,0,0.5);
+  padding: 15px 0px;
+}
+
+.intro p, .about p {
+  width: 70%;
+  margin: 0 auto;
+  font-size: 1.5rem;
+  margin-bottom: 1.5rem;
+}
+
+.intro p:last-child, .about p:last-child {
+  margin-bottom: 0px;
+}
+
+.about p {
+  font-size: 1rem;
+}
 
 .media {
   margin: 0 auto;
@@ -213,8 +251,10 @@ h1 {
   color: white;
   background: rgba(255,255,255,0);
 }
+
+
 .overview {
-  width: auto;
+  width: 840px;
   height: auto;
   overflow: auto;
   margin: 0px auto;
@@ -224,8 +264,9 @@ h1 {
   list-style: none;
   float: left;
   position: relative;
+  text-align: center;
   width: 100px;
-  margin-right: 30px;
+  margin-right: 40px;
 }
 
 .overview a {
@@ -237,6 +278,9 @@ h1 {
   clear: both;
 }
 
+.overview h3 {
+  line-height: 0;
+}
 
 .contact a {
   text-decoration: none;
