--- a/presets/fullPage.js/publish/stylesheet.css
+++ b/presets/fullPage.js/publish/stylesheet.css
@@ -4,12 +4,13 @@ body {
 }
 
 h1 {
-  text-shadow: 0px 0px 10px white;
-  color: rgba(255,255,255,0);
   top: 0px;
   position: absolute;
   text-align: center;
   width: 100%;
+  color: white;
+  -webkit-text-fill-color: rgba(255,255,255,0);
+  -webkit-text-stroke: 2px white;
 }
 
 #menu{
@@ -176,7 +177,7 @@ h1 {
 .slide h1 {
   width: 20%;
   text-align: center;
-  margin-bottom: 30px;
+  margin-bottom: 0px;
 }
 
 .slide img {
@@ -216,11 +217,11 @@ h1 {
 
 .intro span, .about span {
   font-weight: bold;
-  color: #0066FF;
+  color: #94d4ff;
 }
 
 .about {
-  margin-top: 60px;
+  margin-top: 85px;
   background: rgba(0,0,0,0.5);
   padding: 15px 0px;
 }
